<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NotificacaoActivity" >
    
 <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/boxMotivo"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
 
        <TextView
            android:id="@+id/LblMotivo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/lbl_Motivo" />
        
         <TextView
             android:id="@+id/txtMotivo"
             android:layout_width="0dp"
             android:layout_height="49dp"
             android:layout_weight="4.00"
             android:gravity="right"
             android:text="" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/boxSenha"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
 
        <TextView
            android:id="@+id/LblSenha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/lblSenha" />
        
        <EditText
            android:id="@+id/txtSenha"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="4"/>
        

    </LinearLayout>
    <LinearLayout
        android:id="@+id/boxMenssagem"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/LblMenssagem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.83"
            android:gravity="right"
            android:text="@string/lblMenssagem" />
        
         <TextView
             android:id="@+id/txtMenssagem"
             android:layout_width="0dp"
             android:layout_height="66dp"
             android:layout_weight="4.00"
             android:gravity="right"
             android:text="" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/boxControle"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

       <Button
            android:id="@+id/btnEnviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnEnviar" />
         
        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCancelar" />

    </LinearLayout>
    
    </LinearLayout>
    

</RelativeLayout>
